--- a/styles.css
+++ b/styles.css
@@ -55,15 +55,16 @@ h1 {
     font-size: 3rem;
     font-weight: 500;
     text-align: left;
+    margin-top: 0rem;
     margin: 2rem 0 0.5rem;
     letter-spacing: -0.02em;
 }
 
-.subtitle {
+.subtitle, .subtitle-sponsor {
     font-family: 'Space Mono', monospace;
     font-size: 0.9rem;
-    margin-bottom: 4rem;
-}
+    margin-bottom: 0rem;
+} 
 
 .details-group h3 {
     margin-bottom: 10px;  /* Reduce space between subheading and list */
